--- a/plugin/export/plugin.cfg
+++ b/plugin/export/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
-name="GodotAndroidPluginTemplate"
+name="GodotYandexAds"
 description="Template used to build a Godot Android plugin"
 author="Fredia Huya-Kouadio"
 version="0.0"
-script="export_plugin.gd"
+script="yandex_ads.gd"
