--- a/plugin/export/plugin.cfg
+++ b/plugin/export/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
 name="GodotYandexAds"
-description="Template used to build a Godot Android plugin"
-author="Fredia Huya-Kouadio"
+description="Yandex Ads Integration"
+author="Kovardin Artem"
 version="0.0"
-script="yandex_ads.gd"
+script="export_yandex_ads.gd"
